tests/fixtures/invalid/pow_int_float_float.py
# Cannot call pow() with Int, Float, Float
x = pow(1, 1.0, 1.0)
